Added default style & Updated old site page

--- a/index.html
+++ b/index.html
@@ -1,81 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home - Reverse Entertainment</title>
-  <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--  SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500&family=Raleway:wght@100;200;300;400;500&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-<!-- SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuOiBodHRwczovL2NvZGVwZW4uaW8vU2FyYW1hemFsICYgR2l0SHViOiBodHRwczovL2dpdGh1Yi5jb20vc2FyYW1hemFs -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="src/style/style.css">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oops...</title>
+  <link rel="stylesheet" href="new/src/style/tools/default.css">
+  <link rel="stylesheet" href="new/src/style/tools/header.css">
+  <link rel="stylesheet" href="new/src/style/tools/scrollbar.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<sectio class="nav">
-  <h1>Reverse Entertainment</h1>
-  <!-- <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3> -->
-  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-launcher">Launcher</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a><a class="nav-tab" href="#tab-newsite">New site</a></div>
-</sectio>
-<main class="main">
-  <section class="slider" id="tab-newsite">
-    <h1>Our new website!</h1>
-    <h2>
-      <br><a class="Link" href="./new/home.html">Try it!</a>
-    </h2>
-  </section>
-  <section class="slider" id="tab-dream">
-    <h1>Oblivion of Dream</h1>
-    <h2>What has recently left has a chance to return...
-      <br><a class="Link" href="#tab-social">Watch and wait</a>
-    </h2>
-  </section>
-  <section class="slider" id="tab-storm">
-    <h1>The Ocean Shore</h1>
-    <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... 
-      <br>Take part in these battles and show dangerous types of robots who is better here!
-      <br><h2><a class="Link" href="https://bit.ly/3yBhXvo">HypeTownLauncher</a> | <a class="Link" href="https://vkplay.ru/play/game/theoceanshore/">VK Play</a></h2></br>
-    </h2>
-  </section>
-  <section class="slider" id="tab-nsy">
-    <h1>Never Say Yes</h1>
-    <h2>More information will be available later!</h2>
-  </section>
-  <!-- <section class="slider" id="tab-amnesia">
-    <h1>Escape from The Lab</h1>
-    <h2>An exciting puzzle game with a huge number of riddles and a very beautiful game design is already available in early access!
-      <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
-    </h2>
-  </section> -->
-  <section class="slider" id="tab-launcher">
-    <h1>HypeTownLauncher</h1>
-    <h2>Our Launcher where you can download all our games as well as mods from our friend OKOKA.
-      <br><a class="Link" href="https://installer.launcher.xsolla.com/xlauncher-builds/xsolla-launcher-update/4051/bin/web_installer.exe">Download</a></br>
-    </h2>
-  </section>
-  <section class="slider" id="tab-social">
-    <h1>Social Networks</h1>
-    <h2>
-      <p><a class="Link" href="https://vk.com/reverseentofficial">VK</a> | <a class="Link" href="https://t.me/reverseofficial">Telegram</a> | <a class="Link" href="https://www.youtube.com/@reversegamestudio">YouTube</a> | <a class="Link" href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
-    </h2>
-  </section>
-  <section class="slider" id="tab-licenses">
-    <h1>Licenses</h1>
-    <h2>
-      <p><a class="Link" href="LicenseFiles/txt/EULA.txt">EULA</a> | <a class="Link" href="LicenseFiles/txt/PrivacyPolice.txt">Privacy Police</a> | <!--<a href="LicenseFiles/txt/TermsOfUse.txt">--><a class="Link" href="./failed.html">Terms of Use</a></p>
-    </h2>
-  </section>
-</main>
-<canvas class="background"></canvas><!-- SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
-<!-- partial -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="src/script/script.js"></script>
-
+  <header>
+    <ul class="nav-bar-b">
+        <img src="new/src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+        <li>
+           <a class="nav-btn" href="home.html">home</a>
+        </li>
+        <li>
+            <a class="nav-btn" href="news.html">news</a>
+        </li>
+        <li>
+            <a class="nav-btn-s-rg" href="new/products/reversegram.html">reverseGram</a>
+        </li>
+    </ul>
+  </header>
+    <div class="notification">
+      <h1>Oops...</h1>
+      <p>This page is no longer relevant.<br>
+         Please go to the new version of our site!</p>
+      <a class="btn" href="new/home.html">Go!</a>
+    </div>
 </body>
 </html>
