--- a/new/home.html
+++ b/new/home.html
@@ -8,6 +8,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="src/style/style-new.css">
     <link rel="stylesheet" href="src/style/tools/product_headers.css">
+    <link rel="stylesheet" href="src/style/tools/default.css">
     <link rel="stylesheet" href="src/style/tools/footer.css">
     <link rel="stylesheet" href="src/style/tools/header.css">
     <link rel="stylesheet" href="src/style/tools/scrollbar.css">
