--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <ul class="nav-bar-b">
         <img src="new/src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
         <li>
-           <a class="nav-btn" href="home.html">home</a>
+           <a class="nav-btn" href="new/home.html">home</a>
         </li>
         <li>
-            <a class="nav-btn" href="news.html">news</a>
+            <a class="nav-btn" href="new/news.html">news</a>
         </li>
         <li>
             <a class="nav-btn-s-rg" href="new/products/reversegram.html">reverseGram</a>
