--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Ocean Shore</title>
     <link rel="stylesheet" href="src/style/the-ocean-shore.css">
+    <link rel="stylesheet" href="../src/style/tools/default.css">
     <link rel="stylesheet" href="../src/style/tools/footer.css">
     <link rel="stylesheet" href="../src/style/tools/header.css">
     <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
@@ -20,9 +21,9 @@
             <li>
                 <a class="nav-btn" href="../news.html">news</a>
             </li>
-            <li>
-                <a class="nav-btn" href="../index.html">old site</a>
-            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../products/reversegram.html">reverseGram</a>
+            </li>-->
         </ul>
     </header>
     <div class="root">
