--- a/new/home.html
+++ b/new/home.html
@@ -24,9 +24,9 @@
             <li>
                 <a class="nav-btn" href="news.html">news</a>
             </li>
-            <li>
-                <a class="nav-btn" href="../index.html">old site</a>
-            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="products/reversegram.html">reverseGram</a>
+            </li>-->
         </ul>
     </header>
     <div class="product-news-block">
