--- a/new/notifications/fail.html
+++ b/new/notifications/fail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oops...</title>
-    <link rel="stylesheet" href="../src/style/style-new.css">
+    <link rel="stylesheet" href="../src/style/tools/default.css">
     <link rel="stylesheet" href="../src/style/tools/footer.css">
     <link rel="stylesheet" href="../src/style/tools/header.css">
     <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
@@ -33,7 +33,7 @@
             We encountered an unknown error.<br>
             Please contact the developers and report your problem!
         </p>
-        <a class="product-link" href="../home.html">Go back</a>
+        <a class="btn" href="../home.html">Go back</a>
     </div>
 </body>
 <footer>
