Added .css file with page adaptation

--- a/new/game/never-say-yes.html
+++ b/new/game/never-say-yes.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>never-say-yes</title>
+    <link rel="stylesheet" href="../src/style/tools/header.css">
+    <link rel="stylesheet" href="../src/style/tools/footer.css">
+    <link rel="stylesheet" href="../src/style/tools/default.css">
+    <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
+    <link rel="stylesheet" href="src/style/tools/nsy-scrollbar.css">
+    <link rel="stylesheet" href="src/style/never-say-yes.css">
 </head>
 <body>
-    
+    <div class="rg-bg">
+
+    </div>
 </body>
 </html>
