--- a/new/game/oblivion-of-dream.html
+++ b/new/game/oblivion-of-dream.html
@@ -1,12 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>oblivion-of-dream</title>
+    <!-- styles -->
+    <link rel="stylesheet" href="../src/style/tools/header.css">
+    <link rel="stylesheet" href="../src/style/tools/footer.css">
+    <link rel="stylesheet" href="../src/style/tools/default.css">
+    <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
+    <link rel="stylesheet" href="src/style/tools/dream-scrollbar.css">
+    <link rel="stylesheet" href="src/style/oblivion-of-dream.css">
+    <!-- styles -->
 </head>
 <body>
-    
+    <header>
+        <ul class="nav-bar-b">
+            <img class="logo_re" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+               <a class="nav-btn" href="../home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../news.html">news</a>
+            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../products/reversegram.html">reverseGram</a>
+            </li>-->
+        </ul>
+    </header>
+    <div class="pg-bg">
+        <div class="dream-logo">
+            <img class="logo" src="src/img/TheOceanShore_NewLogo_WS_Vertical.png" alt="">
+        </div>
+        <div class="grid" id="00">
+            <div class="dream-block" id="about_game">
+                <img class="img-block" src="src/img/TheOceanShore_LauncherBackground.png" alt="">
+                <h1>
+                    placeholder
+                </h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic nesciunt officia ea voluptate dolores, sapiente maxime suscipit nulla. Autem molestiae iste fugiat pariatur nesciunt neque saepe praesentium corrupti excepturi quam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolorum distinctio, accusantium cum, consequuntur dolore nostrum neque odio molestias ducimus, sint obcaecati temporibus laborum officiis cumque suscipit porro quos doloremque.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam qui recusandae officia laborum eos hic aut. Consequuntur necessitatibus natus, deleniti ea, suscipit totam exercitationem fugit fugiat accusamus, corrupti quod nisi.
+                </p>
+            </div>
+            <div class="dream-block" id="story">
+                <img class="img-block" src="src/img/TheOceanShore_LauncherBackground.png" alt="">
+                <h1>
+                    placeholder
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ea quasi praesentium natus eveniet quisquam, sapiente atque veritatis fuga tempora fugit culpa placeat pariatur a asperiores illo laboriosam, eum reprehenderit?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero dolore, error officiis, odio maiores ut, esse soluta accusantium sed cum excepturi. Odio, cum perferendis ut voluptatem id at hic asperiores!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eaque nostrum quod fugit quisquam vitae quas sit corrupti! Ratione harum nihil enim, corrupti architecto consectetur modi neque cum tempore veniam.s
+                </p>
+            </div>
+        </div>
+        <div class="grid" id="01">
+            <div class="dream-block" id="singleplayer">
+                <img class="img-block" src="src/img/TheOceanShore_LauncherBackground.png" alt="">
+                <h1>
+                    placeholder
+                </h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic nesciunt officia ea voluptate dolores, sapiente maxime suscipit nulla. Autem molestiae iste fugiat pariatur nesciunt neque saepe praesentium corrupti excepturi quam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolorum distinctio, accusantium cum, consequuntur dolore nostrum neque odio molestias ducimus, sint obcaecati temporibus laborum officiis cumque suscipit porro quos doloremque.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam qui recusandae officia laborum eos hic aut. Consequuntur necessitatibus natus, deleniti ea, suscipit totam exercitationem fugit fugiat accusamus, corrupti quod nisi.
+                </p>
+            </div>
+            <div class="dream-block" id="beta-test">
+                <img class="img-block" src="src/img/TheOceanShore_LauncherBackground.png" alt="">
+                <h1>
+                    placeholder
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ea quasi praesentium natus eveniet quisquam, sapiente atque veritatis fuga tempora fugit culpa placeat pariatur a asperiores illo laboriosam, eum reprehenderit?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero dolore, error officiis, odio maiores ut, esse soluta accusantium sed cum excepturi. Odio, cum perferendis ut voluptatem id at hic asperiores!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eaque nostrum quod fugit quisquam vitae quas sit corrupti! Ratione harum nihil enim, corrupti architecto consectetur modi neque cum tempore veniam.s
+                </p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="re-footer">
+            <div class="social">
+                <h1 class="footer-h">
+                    social
+                </h1>
+                <h2>
+                    <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                        twitter
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                        youtube
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                        vk
+                    </a>
+                </h2>
+                
+            </div>
+            <div class="other">
+                <h1 class="footer-h">
+                    pages
+                </h1>
+                <h2>
+                    <a class="footer-link" href="home.html">
+                        home
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="notifications/development.html">
+                        news
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="../index.html">
+                        old site
+                    </a>
+                </h2>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
