--- a/new/home.html
+++ b/new/home.html
@@ -7,6 +7,7 @@
     <title>home</title>
     <!-- styles -->
     <link rel="stylesheet" href="src/style/style-new.css">
+    <link rel="stylesheet" href="src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="src/style/tools/product_headers.css">
     <link rel="stylesheet" href="src/style/tools/default.css">
     <link rel="stylesheet" href="src/style/tools/footer.css">
