--- a/new/news.html
+++ b/new/news.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>news</title>
     <link rel="stylesheet" href="src/style/style-news.css">
+    <link rel="stylesheet" href="src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="src/style/tools/default.css">
     <link rel="stylesheet" href="src/style/tools/footer.css">
     <link rel="stylesheet" href="src/style/tools/header.css">
