--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../src/style/tools/footer.css">
     <link rel="stylesheet" href="../src/style/tools/header.css">
     <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
+    <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
 </head>
 <body>
     <header>
