--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reverseGram</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
+    <link rel="stylesheet" href="../src/style/tools/fonts.css">
     <link rel="shortcut icon" href="src/img/reverseGram_WebSite_L.png" type="image/x-icon">
 </head>
 <body>
