Added Never Say Yes page

--- a/new/game/never-say-yes.html
+++ b/new/game/never-say-yes.html
@@ -13,8 +13,99 @@
     <link rel="stylesheet" href="src/style/never-say-yes.css">
 </head>
 <body>
+    <header>
+        <ul class="nav-bar-b">
+            <img class="logo_re" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+               <a class="nav-btn" href="../home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../news.html">news</a>
+            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../products/reversegram.html">reverseGram</a>
+            </li>-->
+        </ul>
+    </header>
     <div class="rg-bg">
-
+        <div class="logo">
+            <img class="img_logo" src="src/img/nsy_logo.png" alt="nsy_logo">
+        </div>
+        <div class="game-info" id="about_game">
+            <h1 class="nsy_h">
+                placeholder
+            </h1>
+            <div class="line">
+            </div>
+            <p>
+                placeholder
+            </p>
+        </div>
+        <div class="game-info" id="story">
+            <h1 class="nsy_h">
+                placeholder
+            </h1>
+            <div class="line">
+            </div>
+            <p>
+                placeholder
+            </p>
+        </div>
+        <div class="game-info" id="singleplayer">
+            <h1 class="nsy_h">
+                placeholder
+            </h1>
+            <div class="line">
+            </div>
+            <p>
+                placeholder
+            </p>
+        </div>
     </div>
+    <footer>
+        <div class="re-footer">
+            <div class="social">
+                <h1 class="footer-h">
+                    social
+                </h1>
+                <h2>
+                    <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                        twitter
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                        youtube
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                        vk
+                    </a>
+                </h2>
+                
+            </div>
+            <div class="other">
+                <h1 class="footer-h">
+                    pages
+                </h1>
+                <h2>
+                    <a class="footer-link" href="home.html">
+                        home
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="notifications/development.html">
+                        news
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="../index.html">
+                        old site
+                    </a>
+                </h2>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
