--- a/new/home.html
+++ b/new/home.html
@@ -19,7 +19,7 @@
     <header>
         <ul class="nav-bar-b">
             <img src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
-            <li>
+            <li class="active">
                <a class="nav-btn" href="home.html">home</a>
             </li>
             <li>
