--- a/new/news.html
+++ b/new/news.html
@@ -19,7 +19,7 @@
             <li>
                <a class="nav-btn" href="home.html">home</a>
             </li>
-            <li>
+            <li class="active">
                 <a class="nav-btn" href="news.html">news</a>
             </li>
             <!--<li>
