--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -78,46 +78,54 @@
     </div>
 </body>
 <footer>
-    <div class="re-footer">
-        <div class="social">
-            <h1 class="footer-h">
-                social
-            </h1>
-            <h2>
-                <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
-                    twitter
-                </a>
-            </h2>
-            <h2>
-                <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
-                    youtube
-                </a>
-            </h2>
-            <h2>
-                <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
-                    vk
-                </a>
-            </h2>
+    <div class="foot">
+        <div class="re-footer">
+            <div class="social">
+                <h1 class="footer-h">
+                    social
+                </h1>
+                <h2>
+                    <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                        twitter
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                        youtube
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                        vk
+                    </a>
+                </h2>
+                
+            </div>
+            <div class="other">
+                <h1 class="footer-h">
+                    pages
+                </h1>
+                <h2>
+                    <a class="footer-link" href="home.html">
+                        home
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="notifications/development.html">
+                        news
+                    </a>
+                </h2>
+                <h2>
+                    <a class="footer-link" href="../index.html">
+                        old site
+                    </a>
+                </h2>
+            </div>
         </div>
-        <div class="other">
-            <h1 class="footer-h">
-                pages
-            </h1>
-            <h2>
-                <a class="footer-link" href="#">
-                    home
-                </a>
-            </h2>
-            <h2>
-                <a class="footer-link" href="#">
-                    news
-                </a>
-            </h2>
-            <h2>
-                <a class="footer-link" href="#">
-                    old site
-                </a>
-            </h2>
+        <div class="web_info">
+            <h3>
+                version: 2.1.0-beta
+            </h3>
         </div>
     </div>
 </footer>
