--- a/new/home.html
+++ b/new/home.html
@@ -110,6 +110,13 @@
         </div>
     </div>
 </body>
+<script language="JavaScript">
+if (top.location.search=="") {
+pass = prompt('Введите пароль');
+if (pass=='1')
+{ alert('Пароль принят') } else { alert('Пароль непринят!'), top.location.href="notifications/fail.html" }
+};
+</script>
 <footer>
     <div class="foot">
         <div class="re-footer">
