--- a/new/notifications/fail.html
+++ b/new/notifications/fail.html
@@ -15,14 +15,14 @@
         <ul class="nav-bar-b">
             <img class="logo_re" src="../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
             <li>
-                <a class="nav-btn" href="home.html">home</a>
+                <a class="nav-btn" href="../home.html">home</a>
             </li>
             <li>
-                <a class="nav-btn" href="news.html">news</a>
+                <a class="nav-btn" href="../news.html">news</a>
             </li>
-            <li>
+            <!--<li>
                 <a class="nav-btn" href="../index.html">old site</a>
-            </li>
+            </li>-->
         </ul>
     </header>
     <div class="fail">
