--- a/new/home.html
+++ b/new/home.html
@@ -110,13 +110,7 @@
         </div>
     </div>
 </body>
-<script language="JavaScript">
-if (top.location.search=="") {
-pass = prompt('Введите пароль');
-if (pass=='1')
-{ alert('Пароль принят') } else { alert('Пароль непринят!'), top.location.href="notifications/fail.html" }
-};
-</script>
+<script src="src/js/script.js"></script>
 <footer>
     <div class="foot">
         <div class="re-footer">
