The header and footer have been moved to separate files

--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -7,26 +7,11 @@
     <title>The Ocean Shore</title>
     <link rel="stylesheet" href="src/style/the-ocean-shore.css">
     <link rel="stylesheet" href="../src/style/tools/default.css">
-    <link rel="stylesheet" href="../src/style/tools/footer.css">
-    <link rel="stylesheet" href="../src/style/tools/header.css">
     <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
     <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
 </head>
 <body>
-    <header>
-        <ul class="nav-bar-b">
-            <img class="logo_re" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
-            <li>
-               <a class="nav-btn" href="../home.html">home</a>
-            </li>
-            <li>
-                <a class="nav-btn" href="../news.html">news</a>
-            </li>
-            <!--<li>
-                <a class="nav-btn-s-rg" href="../products/reversegram.html">reverseGram</a>
-            </li>-->
-        </ul>
-    </header>
+    <iframe class="frame_header" src="../src/tools/header.html" width="100%" height="100px" frameborder="0"></iframe>
     <div class="root">
         <div class="product-info-block" id="about">
             <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="about_bg">
@@ -76,57 +61,6 @@
             </div>
         </div>
     </div>
+    <iframe class="frame_footer" src="../src/tools/footer.html" width="1260px" height="420px" frameborder="0"></iframe>
 </body>
-<footer>
-    <div class="foot">
-        <div class="re-footer">
-            <div class="social">
-                <h1 class="footer-h">
-                    social
-                </h1>
-                <h2>
-                    <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
-                        twitter
-                    </a>
-                </h2>
-                <h2>
-                    <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
-                        youtube
-                    </a>
-                </h2>
-                <h2>
-                    <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
-                        vk
-                    </a>
-                </h2>
-                
-            </div>
-            <div class="other">
-                <h1 class="footer-h">
-                    pages
-                </h1>
-                <h2>
-                    <a class="footer-link" href="home.html">
-                        home
-                    </a>
-                </h2>
-                <h2>
-                    <a class="footer-link" href="notifications/development.html">
-                        news
-                    </a>
-                </h2>
-                <h2>
-                    <a class="footer-link" href="../index.html">
-                        old site
-                    </a>
-                </h2>
-            </div>
-        </div>
-        <div class="web_info">
-            <h3>
-                version: 2.1.0-beta
-            </h3>
-        </div>
-    </div>
-</footer>
 </html>
