--- a/new/game/oblivion-of-dream.html
+++ b/new/game/oblivion-of-dream.html
@@ -15,20 +15,7 @@
     <!-- styles -->
 </head>
 <body>
-    <header>
-        <ul class="nav-bar-b">
-            <img class="logo_re" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
-            <li>
-               <a class="nav-btn" href="../home.html">home</a>
-            </li>
-            <li>
-                <a class="nav-btn" href="../news.html">news</a>
-            </li>
-            <!--<li>
-                <a class="nav-btn-s-rg" href="../products/reversegram.html">reverseGram</a>
-            </li>-->
-        </ul>
-    </header>
+    <iframe class="frame_header" src="../src/tools/header.html" width="100%" height="100px" frameborder="0"></iframe>
     <div class="pg-bg">
         <div class="dream-logo">
             <img class="logo" src="src/img/TheOceanShore_NewLogo_WS_Vertical.png" alt="">
@@ -82,57 +69,6 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="foot">
-            <div class="re-footer">
-                <div class="social">
-                    <h1 class="footer-h">
-                        social
-                    </h1>
-                    <h2>
-                        <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
-                            twitter
-                        </a>
-                    </h2>
-                    <h2>
-                        <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
-                            youtube
-                        </a>
-                    </h2>
-                    <h2>
-                        <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
-                            vk
-                        </a>
-                    </h2>
-                    
-                </div>
-                <div class="other">
-                    <h1 class="footer-h">
-                        pages
-                    </h1>
-                    <h2>
-                        <a class="footer-link" href="home.html">
-                            home
-                        </a>
-                    </h2>
-                    <h2>
-                        <a class="footer-link" href="notifications/development.html">
-                            news
-                        </a>
-                    </h2>
-                    <h2>
-                        <a class="footer-link" href="../index.html">
-                            old site
-                        </a>
-                    </h2>
-                </div>
-            </div>
-            <div class="web_info">
-                <h3>
-                    version: 2.1.0-beta
-                </h3>
-            </div>
-        </div>
-    </footer>
+    <iframe class="frame_footer" src="../src/tools/footer.html" width="1260px" height="420px" frameborder="0"></iframe>
 </body>
 </html>
