--- a/new/src/tools/footer.html
+++ b/new/src/tools/footer.html
@@ -55,7 +55,7 @@
             </div>
             <div class="web_info">
                 <h3 class="web_h">
-                    version: 2.1.0-beta
+                    version: <a class="bblckcherya" href="https://github.com/Reeversee/reeversee.github.io/releases/tag/2.1.0-beta">2.1.0-beta</a>
                 </h3>
                 <h3 class="web_h">
                     made by <a class="bblckcherya" href="https://t.me/CherryMerryy">bublickk</a>
