--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -8,80 +8,48 @@
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="../src/style/tools/fonts.css">
+    <script src="../src/js/script.js"></script>
     <link rel="shortcut icon" href="src/img/reverseGram_WebSite_L.png" type="image/x-icon">
 </head>
 <body>
-    <div class="nav-bar">
-        <h1 class="rg_header_nb">
-            reverseGram
-        </h1>
-    </div>
-    <div class="rg_desc">
-        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2" width="350px" height="350px">
-        <h1 class="rg_header">
-            about
-        </h1>
-        <p class="rg_p">
-            Unofficial Telegram client based on Android sources with new features.<br>
-       <!-- - {feature}<br>
-            - {feature}<br>
-            - {feature}<br>
-            - {feature}<br>
-            - {feature}<br>
-            - {feature}<br> -->
-        </p>
+    <div class="bg">
+        <div class="b" id="00">
+            <div class="info-right">
+                <img src="src/img/reverseGram_Update.png" alt="Update" class="d-img">
+                <div class="text-content">
+                    <h1>Unofficial Telegram client based on Android sources with new features:</h1>
+                    <p>
+                        - Modern Interface<br>
+                        - Marvelous Design<br>
+                        - Download Speed Boost<br>
+                        - The Best Camera<br>
+                        and much more...<br>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="b" id="01">
+            <div class="info-right">
+                <div class="text-content">
+                    <h1>Material theme</h1>
+                    <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
+                    <p class="note">
+                        *for Android 12 and higher
+                    </p>
+                </div>
+                <img src="src/img/reverseGram_Update.png" alt="Update" class="d-img">
+            </div>
+        </div>
+        <div class="b" id="download">
+            <div class="info">
+                <div class="text-content">
+                    <h1>Download links</h1>
+                </div>
+                <a href="#" class="link">APK</a>
+                <a href="https://apps.rustore.ru/app/com.reversegram.messenger" class="link">RuStore</a>
+                <a href="#" class="link">AppGallery</a>
+            </div>
+        </div>
     </div>
 </body>
-<footer>
-    <div class="rg_footer">
-        <div class="rg_footer_block" id="01_social">
-            <h1 class="rg_footer_h">
-                social
-            </h1>
-            <div class="rg_nav-footer">
-                <a class="rg_button" href="https://t.me/reverseGram">
-                    Telegram
-                </a>
-                <a class="rg_button" href="https://t.me/reverseGramUpdates">
-                    Updates
-                </a>
-                <a class="rg_button" href="https://t.me/+TDgUKI8I2cs1ODgy">
-                    Official Chat
-                </a>
-            </div>
-        </div>
-        <div class="rg_footer_block" id="02_social-re">
-            <h1 class="rg_footer_h">
-                social 
-            </h1>
-            <div class="rg_nav-footer">
-                <a class="footer-link-tw" href="../home.html">
-                    twitter
-                </a>
-                <a class="footer-link-vk" href="../news.html">
-                    vk
-                </a>
-                <a class="footer-link-yt" href="../../index.html">
-                    youtube
-                </a>
-            </div>
-        </div>
-        <div class="rg_footer_block" id="03_pages">
-            <h1 class="rg_footer_h">
-                pages
-            </h1>
-            <div class="rg_nav-footer">
-                <a class="rg_button" href="../home.html">
-                    home
-                </a>
-                <a class="rg_button" href="../notifications/development.html">
-                    news
-                </a>
-                <a class="rg_button" href="../../index.html">
-                    old site
-                </a>
-            </div>
-        </div>
-    </div>
-</footer>
 </html>
