--- a/new/newsentry/patch_notes/patch-note-0-5-0.html
+++ b/new/newsentry/patch_notes/patch-note-0-5-0.html
@@ -8,63 +8,134 @@
     <link rel="stylesheet" href="../../src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="../../src/style/tools/default.css">
     <link rel="stylesheet" href="../../src/style/tools/scrollbar.css">
+    <link rel="stylesheet" href="../../src/style/tools/header.css">
+    <link rel="stylesheet" href="../../src/style/tools/footer.css">
+    <link rel="stylesheet" href="../../src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="src/style/style.css">
+    <script src="../../src/js/script.js"></script>
 </head>
 <body>
-    <iframe class="frame_header" src="../../src/tools/header.html" width="100%" height="100px" frameborder="0"></iframe>
+    <header>
+        <ul class="nav-bar-b">
+            <img src="../../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li class="active">
+               <a class="nav-btn" href="home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="news.html">news</a>
+            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../../products/reversegram.html">reverseGram</a>
+            </li>-->
+        </ul>
+    </header>
     <div class="patch-note-bg">
         <div class="pn-block-bg" id="new">
             <h1 class="pn-u">
-                NEW
+                НОВОВВЕДЕНИЯ
             </h1>
             <div class="pn-block">
-                <img src="src/img/TheOceanShore_LauncherBackground.png" alt="" class="ss">
+                <img src="src/img/NewMaps_Screenshot.png" alt="" class="ss">
                 <h1 class="pn-header">
-                    header
+                    Новые карты
                 </h1>
                 <p class="pn-text">
-                    text
+                    Добавлены новые карты для режимов: Командный бой, Захват и новый режим о котором вы сможете прочитать в блоке ниже.
                 </p>
             </div>
             <div class="pn-block">
-                <img src="src/img/TheOceanShore_LauncherBackground.png" alt="" class="ss">
+                <img src="src/img/PolygonPlant.png" alt="" class="ss">
                 <h1 class="pn-header">
-                    header
+                    Найти и уничтожить
                 </h1>
                 <p class="pn-text">
-                    text
+                    Игровой режим из нескольких раундов, в котором команда нападающих противостоит команде защитников; в середине матча команды меняются ролями. Нападающие должны заложить взрывчатку у одной из двух целей. Когда бомба будет заложена, начнётся обратный отсчёт времени. Если устройство взорвётся, команде нападающих присуждается победа. Защитники должны оборонять цели, мешать нападающим закладывать бомбы, а в случае их обнаружения обезвреживать устройства. Любая из команд может одержать победу в раунде, полностью уничтожив команду противника, но только в том случае, если нападающие не успели заложить бомбу. В последнем случае защитникам нужно дополнительно обезвредить взрывчатку.
+                </p>
+            </div>
+            <div class="pn-block">
+                <img src="src/img/Jumppad.png" alt="" class="ss">
+                <h1 class="pn-header">
+                    Джампады
+                </h1>
+                <p class="pn-text">
+                    Джампад очень удобен в использовании<br>
+                    Чтобы его использовать нужно просто встать внутр джампада, прыгнуть и попасть на этаж выше.<br>
+                    Найти их можно на картах Polygon: TDM, Polygon: Conquest
                 </p>
             </div>
         </div>
         <div class="pn-block-bg" id="changes">
             <h1 class="pn-u">
-                CHANGES
+                ИЗМЕНЕНИЯ
             </h1>
             <div class="pn-block">
-                <img src="src/img/TheOceanShore_LauncherBackground.png" alt="" class="ss">
+                <img src="src/img/StormMainMenu.png" alt="" class="ss">
                 <h1 class="pn-header">
-                    header
+                    Обновленный интерфейс
                 </h1>
                 <p class="pn-text">
-                    text
-                </p>
-            </div>
-        </div>
-        <div class="pn-block-bg" id="fixes">
-            <h1 class="pn-u">
-                FIXES
-            </h1>
-            <div class="pn-block">
-                <img src="src/img/TheOceanShore_LauncherBackground.png" alt="" class="ss">
-                <h1 class="pn-header">
-                    header
-                </h1>
-                <p class="pn-text">
-                    text
+                    В этом обновление мы переделали весь интерфейс с 0 используя огромное количество различных фишек которые упрощают его использование.
                 </p>
             </div>
         </div>
     </div>
-    <iframe class="frame_footer" src="../../src/tools/footer.html" width="1260px" height="420px" frameborder="0"></iframe>
+    <footer>
+        <div class="foot">
+            <div class="re-footer">
+                <div class="social">
+                    <h1 class="footer-h">
+                        social
+                    </h1>
+                    <h2>
+                        <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                            twitter
+                        </a>
+                    </h2>
+                    <h2>
+                        <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                            youtube
+                        </a>
+                    </h2>
+                    <h2>
+                        <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                            vk
+                        </a>
+                    </h2>
+                    
+                </div>
+                <div class="other">
+                    <h1 class="footer-h">
+                        pages
+                    </h1>
+                    <h2>
+                        <a class="footer-link" href="home.html">
+                            home
+                        </a>
+                    </h2>
+                    <h2>
+                        <a class="footer-link" href="notifications/development.html">
+                            news
+                        </a>
+                    </h2>
+                    <h2>
+                        <a class="footer-link" href="../index.html">
+                            old site
+                        </a>
+                    </h2>
+                </div>
+            </div>
+            <div class="web_info">
+                <div class="web_h" id="version">
+                    <script>
+                        var version = getWebSiteLatestVersion();
+                        document.getElementById("version").innerHTML = 'version - ' + version;
+                    </script>
+                  </div>
+                <h3 class="web_h">
+                    made by <a class="bblckcherya" href="https://t.me/CherryMerryy">bublickk</a>
+                </h3>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
