--- a/new/home.html
+++ b/new/home.html
@@ -16,7 +16,20 @@
     <!-- styles -->
 </head>
 <body>
-    <iframe class="frame_header" src="src/tools/header.html" width="100%" height="100px" frameborder="0"></iframe>
+    <header>
+        <ul class="nav-bar-b">
+            <img src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li class="active">
+               <a class="nav-btn" href="home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="news.html">news</a>
+            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../../products/reversegram.html">reverseGram</a>
+            </li>-->
+        </ul>
+    </header>
     <div class="product-news-block">
         <div class="product-info">
             <div class="product-info-h">
