--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -9,9 +9,23 @@
     <link rel="stylesheet" href="../src/style/tools/default.css">
     <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
     <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
+    <link rel="stylesheet" href="../src/style/tools/header.css">
 </head>
 <body>
-    <iframe class="frame_header" src="../src/tools/header.html" width="100%" height="100px" frameborder="0"></iframe>
+    <header>
+        <ul class="nav-bar-b">
+            <img src="../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li class="active">
+               <a class="nav-btn" href="../home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../news.html">news</a>
+            </li>
+            <!--<li>
+                <a class="nav-btn-s-rg" href="../../products/reversegram.html">reverseGram</a>
+            </li>-->
+        </ul>
+    </header>
     <div class="root">
         <div class="product-info-block" id="about">
             <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="about_bg">
@@ -41,7 +55,18 @@
             </p>
         </div>
         <div class="news-feed" id="news-feed">
-            <div class="news-entry" id="news_00">
+            <div class="news-entry" id="news_02">
+                <h1 class="news-header">
+                    Update on Saturday!
+                </h1>
+                <p class="news-text">
+                    We have some very good news to tell you🦔<br>
+                    An update for our game The Ocean Shore is coming out this Saturday!<br>
+                    It will come out on Android and Windows. (no PS this time, sorry😢)<br><br>
+                    <a class="btn" href="../newsentry/patch_notes/patch-note-0-5-0.html">Read full patch note</a>
+                </p>
+            </div>
+            <div class="news-entry" id="news_01">
                 <h1 class="news-header">
                     Happy Victory Day!
                 </h1>
@@ -51,7 +76,7 @@
                     Before that, we released a small patch to the current version of the game to fix some issues.
                 </p>
             </div>
-            <div class="news-entry" id="news_01">
+            <div class="news-entry" id="news_00">
                 <h1 class="news-header">
                     Update 0.5.0 is coming soon
                 </h1>
