--- a/new/newsentry/patch_notes/patch-note-0-5-0.html
+++ b/new/newsentry/patch_notes/patch-note-0-5-0.html
@@ -19,10 +19,10 @@
         <ul class="nav-bar-b">
             <img src="../../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
             <li class="active">
-               <a class="nav-btn" href="home.html">home</a>
+               <a class="nav-btn" href="../../home.html">home</a>
             </li>
             <li>
-                <a class="nav-btn" href="news.html">news</a>
+                <a class="nav-btn" href="../../news.html">news</a>
             </li>
             <!--<li>
                 <a class="nav-btn-s-rg" href="../../products/reversegram.html">reverseGram</a>
