reverseGram page updated

--- a/new/home.html
+++ b/new/home.html
@@ -25,9 +25,9 @@
             <li>
                 <a class="nav-btn" href="news.html">news</a>
             </li>
-            <!--<li>
-                <a class="nav-btn-s-rg" href="../../products/reversegram.html">reverseGram</a>
-            </li>-->
+            <li>
+                <a class="nav-btn-s-rg" href="products/reversegram.html">reverseGram</a>
+            </li>
         </ul>
     </header>
     <div class="product-news-block">
