--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -8,14 +8,29 @@
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="../src/style/adaptation/adaptation.css">
     <link rel="stylesheet" href="../src/style/tools/fonts.css">
+    <link rel="stylesheet" href="../src/style/tools/header.css">
     <script src="../src/js/script.js"></script>
     <link rel="shortcut icon" href="src/img/reverseGram_WebSite_L.png" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <ul class="nav-bar-b">
+            <img src="../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+               <a class="nav-btn" href="../home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../news.html">news</a>
+            </li>
+            <li class="active">
+                <a class="nav-btn-s-rg" href="reversegram.html">reverseGram</a>
+            </li>
+        </ul>
+    </header>
     <div class="bg">
         <div class="b" id="00">
             <div class="info-right">
-                <img src="src/img/reverseGram_Update.png" alt="Update" class="d-img">
+                <img src="src/img/Screenshot_RuStore_02.png" alt="Update" class="ss-img">
                 <div class="text-content">
                     <h1>Unofficial Telegram client based on Android sources with new features:</h1>
                     <p>
@@ -37,6 +52,24 @@
                         *for Android 12 and higher
                     </p>
                 </div>
+                <img src="src/img/Screenshot_RuStore_01_ENG.png" alt="Update" class="ss-img">
+            </div>
+        </div>
+        <div class="b" id="02">
+            <div class="info-right">
+                <div class="text-content">
+                    <h1>Custom UI</h1>
+                    <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
+                </div>
+                <img src="src/img/Screenshot_RuStore_00_ENG.png" alt="Update" class="ss-img">
+            </div>
+        </div>
+        <div class="b" id="03">
+            <div class="info-right">
+                <div class="text-content">
+                    <h1>Huge number of updates</h1>
+                    <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
+                </div>
                 <img src="src/img/reverseGram_Update.png" alt="Update" class="d-img">
             </div>
         </div>
@@ -45,9 +78,10 @@
                 <div class="text-content">
                     <h1>Download links</h1>
                 </div>
-                <a href="#" class="link">APK</a>
+                <a href="https://t.me/reverseGram" class="link" download="">Telegram channel</a>
+                <a href="rg_apk/reverseGram-universal-01062023.apk" class="link" download="">APK</a>
                 <a href="https://apps.rustore.ru/app/com.reversegram.messenger" class="link">RuStore</a>
-                <a href="#" class="link">AppGallery</a>
+                <!--<a href="#" class="link" aria-disabled="true">AppGallery</a>-->
             </div>
         </div>
     </div>
