--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="b" id="03">
-            <div class="info-right">
+            <div class="info">
                 <div class="text-content">
                     <h1>Huge number of updates</h1>
                     <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
