Added reverseGram version

--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -78,6 +78,14 @@
                 <div class="text-content">
                     <h1>Download links</h1>
                 </div>
+                <div class="web_h" id="version">
+                    <a href="https://github.com/Reeversee/reverseGram">
+                        <script>
+                            var version = getReverseGramLatestVersion();
+                            document.getElementById("version").innerHTML = 'version - ' + version;
+                        </script>
+                    </a>
+                </div>
                 <a href="https://t.me/reverseGram" class="link" download="">Telegram channel</a>
                 <a href="rg_apk/reverseGram-universal-01062023.apk" class="link" download="">APK</a>
                 <a href="https://apps.rustore.ru/app/com.reversegram.messenger" class="link">RuStore</a>
