--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -32,7 +32,7 @@
             <div class="info-right">
                 <img src="src/img/Screenshot_RuStore_02.png" alt="Update" class="ss-img">
                 <div class="text-content">
-                    <h1>Unofficial Telegram client based on Android sources with new features:</h1>
+                    <h1 class="head">Unofficial Telegram client based on Android sources with new features:</h1>
                     <p>
                         - Modern Interface<br>
                         - Marvelous Design<br>
