--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -57,15 +57,15 @@
         </div>
         <div class="b" id="02">
             <div class="info-right">
+                <img src="src/img/Screenshot_RuStore_00_ENG.png" alt="Update" class="ss-img">
                 <div class="text-content">
                     <h1>Custom UI</h1>
                     <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
                 </div>
-                <img src="src/img/Screenshot_RuStore_00_ENG.png" alt="Update" class="ss-img">
             </div>
         </div>
         <div class="b" id="03">
-            <div class="info">
+            <div class="info-left">
                 <div class="text-content">
                     <h1>Huge number of updates</h1>
                     <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
