--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -60,7 +60,7 @@
                 <img src="src/img/Screenshot_RuStore_00_ENG.png" alt="Update" class="ss-img">
                 <div class="text-content">
                     <h1>Custom UI</h1>
-                    <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
+                    <p>Use large variety of settings provided by reverseGram to customise your app's look and feel.</p>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="info-left">
                 <div class="text-content">
                     <h1>Huge number of updates</h1>
-                    <p>Experience reverseGram with the best Material You theme among all Telegram clients, made possible by the amazing work our designers made.</p>
+                    <p>Now updates are coming out as often as possible! </p>
                 </div>
                 <img src="src/img/reverseGram_Update.png" alt="Update" class="d-img">
             </div>
